fix spacing dashboard

--- a/resources/sass/components/_dashboard.scss
+++ b/resources/sass/components/_dashboard.scss
@@ -582,7 +582,7 @@ a{
         float: left;
         width: 44%;
         margin-left: 5%;
-        margin-right: 5%;
+        margin-right: 3.1%;
         margin-top: 0%;
         margin-bottom: 2%;
     }
@@ -621,16 +621,28 @@ a{
     
     //chat
     .dash__container__chat{
-        width:43%;
         margin-top: 50px;
         margin-bottom:0%;
-        margin-left: 52%;
+        margin-left: 0%;
         padding-bottom: 2%;
         padding-top:2%;
         padding-left:2%;
         display:flex;
         flex-direction: column;
     }
+
+    /*
+    .dash__container__par{
+        background-color:$lightgray;
+        border-radius: 20px 20px 20px 20px;
+        margin-left:5%;
+        margin-right:5%;
+        margin-top:10%;
+        margin-bottom:10%;
+        padding-bottom: 3%;
+        padding-top:3%;
+    }
+    */
 
     .dash__chat{
         display: flex;
